Code cleanup for Authorise-Authenticate types, ClientInfo
Change-Id: I5eff1ab903031117c8d49c00ca2c19a047f72f46